<resources>
    <string name="app_name" translatable="false">NYC Rat Tracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (required)</string>
    <string name="prompt_password">Password (required)</string>
    <string name="prompt_admin">Register as an Admin?</string>
    <string name="action_sign_in">Username (required)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_admin">AdminActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_logout">LogoutActivity</string>

    <string name="title_activity_edit_resident">EditResidentActivity</string>
    <string name="title_activity_edit_city_official">EditCityOfficialActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nyc_rat_tracker">NYC Rat Tracker</string>
    <string name="report_a_rat_sighting">Report a Rat Sighting</string>
    <string name="go_to_login_screen">Go To Login Screen</string>
    <string name="login">Login</string>
    <string name="nyc_rat_tracking_app">NYC Rat Tracking App</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_attempts_remaining">Login Attempts Remaining:</string>
    <string name="hash">###</string>
    <string name="login_login">login</string>
    <string name="cancel_cancel">Cancel</string>
    <string name="register_button_on_login_screen">register</string>
    <string name="title_activity_rat_report_loader">Loading Rat Reports</string>
    <string name="title_activity_report_list">Rat Report List</string>
    <string name="title_activity_report_entry">Rat Report Entry Screen</string>
    <string name="title_activity_report_detail">Rat Sighting Reports</string>
    <string name="press_below_for_list_view_of_rat_reports">Press below for list view of rat reports:</string>
    <string name="rat_report_list_view" translatable="false">Rat Report Details</string>
    <string name="logout_report_detail">Logout</string>
    <string name="username_content_report_entry">Username</string>
    <string name="creation_date">Creation Date</string>
    <string name="report_id">Report ID</string>
    <string name="select_zip_code">Select Zip Code</string>
    <string name="select_borough">Select Borough</string>
    <string name="load_reports">Load Reports</string>
    <string name="login_go_to_register">Login or Register</string>
    <string name="rat_report_content_view">Rat Report Content</string>
    <string name="select_city">Select City</string>
    <string name="select_location_type">Select Location Type</string>
    <string name="scroll_through_report_list">Scroll through list of rat reports below:</string>
    <string name="report_a_rat">Report a Rat</string>
    <string name="get_report">Get Report</string>
    <string name="back_to_reports">Back to Rat Reports</string>
    <string name="address">address</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="add_report">Add Report</string>
    <string name="cancel_report">Cancel</string>
    <string name="enter_new_report">Enter New Report</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="user_name_string">Username</string>
</resources>
