<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_report_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="area52.rat_tracking_application.controllers.ReportEntryActivity"
    tools:showIn="@layout/activity_report_entry">

    <TextView
        android:id="@+id/user_name"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/username_content_report_entry"
        android:visibility="gone" />

    <TextView
        android:id="@+id/unique_key_id"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/report_id"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/borough_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/unique_key_id"
        android:layout_marginTop="32dp"
        android:dropDownSelector="@android:drawable/spinner_dropdown_background"
        android:entries="?attr/listChoiceBackgroundIndicator"
        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        android:text="@string/select_borough"
        android:visibility="visible"
        tools:listitem="@android:layout/simple_spinner_dropdown_item">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </Spinner>

    <Spinner
        android:id="@+id/address_city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/borough_spinner"
        android:layout_marginTop="33dp"
        android:background="@android:drawable/spinner_dropdown_background"
        android:dropDownSelector="@android:drawable/spinner_dropdown_background"
        android:entries="?android:attr/listChoiceBackgroundIndicator"
        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        android:text="@string/select_city"
        android:visibility="visible"
        tools:listitem="@android:layout/simple_spinner_dropdown_item">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </Spinner>

    <Spinner
        android:id="@+id/zip_code_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/address_city_spinner"
        android:layout_marginTop="32dp"
        android:dropDownSelector="@android:drawable/spinner_dropdown_background"
        android:entries="?android:attr/listChoiceBackgroundIndicator"
        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        android:text="@string/select_zip_code"
        android:visibility="visible"
        tools:listitem="@android:layout/simple_spinner_dropdown_item">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </Spinner>

    <Spinner
        android:id="@+id/location_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/zip_code_spinner"
        android:layout_marginTop="32dp"
        android:dropDownSelector="@android:drawable/spinner_dropdown_background"
        android:entries="?attr/listChoiceBackgroundIndicator"
        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        android:text="@string/select_location_type"
        android:visibility="visible"
        tools:listitem="@android:layout/simple_spinner_dropdown_item">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </Spinner>

    <Button
        android:text="Add Report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_button"
        android:layout_above="@+id/cancel_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
